--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <p style="font-family: 'PoppinsB', Arial; font-size: 24px; padding: 1px;">Enda</p>
             <p style="padding-top: 0px;">pula</p>
             <a class="link" href="https://meower.xyz" target="_blank">made by randomuser</a>
+            <a class="link" href="https://paypal.me/EndaDwagon" target="_blank">Donations</a>
             <a class="link" onclick="fesw('main', 'files');">Android Stuff</a>
             <a class="link" href="https://discord.gg/fd7ZFqYf2A" target="_blank">Discord</a>
             <a class="link" href="https://www.youtube.com/channel/UCp1p7QFeHLurNx-FeDklrSA?sub_confirmation=1"
