--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             padding: 15px;
             border-radius: 14px;
             background-color: rgb(40, 40, 40, 0.4);
-            border: 2px solid rgb(30, 30, 30, 0.5);
+            border: 2px solid rgb(30, 30, 30, 0.3);
             backdrop-filter: blur(14px);
             -webkit-backdrop-filter: blur(14px);
             text-align: center;
@@ -115,7 +115,7 @@
             <a class="link" href="https://www.youtube.com/channel/UCp1p7QFeHLurNx-FeDklrSA?sub_confirmation=1"
                 target="_blank">YouTube</a>
             <a class="link" href="https://twitter.com/EnderDragon__" target="_blank">Twitter</a>
-            <a class="link" href="https://tiktok.com/@enderdragon_1" target="_blank">TikTok</a>
+            <a class="link" href="https://www.tiktok.com/@endadwagon" target="_blank">TikTok</a>
             <a class="link" href="https://twitch.tv/enderdragon_live" target="_blank">Twitch</a>
             <a class="link" href="https://instagram.com/ender.dragon_" target="_blank">Insta</a>
         </div>
